# rag-ruslaw

./: .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
data/fixtures/: mini_docs.jsonl
docs/: retrieval_analysis.md  retrieval_metrics_methodology.md
notebooks/: RAG_RusLaw_Demo.ipynb
scripts/: autolink_evalset_chunks.py  build_index.py  chunk_stats.py  docs_catalog.py  evaluate.py  evaluate_ragas.py  generate_evalset_draft.py  generate_evalset_llm.py  hf_slice.py  ingest.py  retrieve_cli.py  serve.py  validate_evalset.py
scripts/analysis/: plot_retrieval_metrics.py
src/rag/: logging.py
src/rag/api/: main.py  models.py  routes.py
src/rag/cli/: chunk_stats.py  docs_catalog.py  retrieve_cli.py
src/rag/embeddings/: config.py  st.py
src/rag/eval/: evalset.py  evalset_llm.py  metrics_loader.py  ragas_runner.py  retrieval_metrics.py
src/rag/index/: bm25.py  contracts.py  faiss_dense.py  hybrid.py
src/rag/ingest/: chunking.py  hf_slice.py  load_dataset.py  preprocess.py  (+1 more)
tests/: conftest.py  test_analysis_plot.py  test_api_retrieve.py  test_autolink_evalset.py  test_bm25.py  test_chunk_stats.py  test_chunking.py  test_chunking_structural.py  test_dense_retriever.py  test_docs_catalog.py  test_evalset_draft.py  test_evalset_llm.py  test_hf_slice.py  test_hybrid_retriever.py  test_ingest_normalization.py  test_logging.py  test_metrics_loader.py  test_openrouter_env_config.py  test_openrouter_retry.py  test_preprocess_clean.py  test_rag_citations.py  test_rag_context_format.py  test_rag_pipeline_fallback.py  test_rag_pipeline_model_override.py  test_ragas_runner.py  test_retrieval_metrics.py  test_retrieve_cli.py  test_slice_loading.py  test_ui_service.py
ui/: streamlit_app.py
(+5 files in other folders)
