[project]
name = "rag-ruslaw"
version = "0.1.0"
description = "Educational RAG MVP over RusLawOD (retrieval + RAGAS eval + FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Data & IO
  "datasets>=2.19.0",
  "pyarrow>=15.0.0",
  "pandas>=2.2.0",
  "orjson>=3.9.0",
  "python-dotenv>=1.0.1",

  # Retrieval
  "rank-bm25>=0.2.2",
  "sentence-transformers>=2.6.0",
  "faiss-cpu>=1.8.0",
  "matplotlib>=3.8.0",
  "tabulate>=0.9.0",
  "hf-transfer>=0.1.9",

  # LangChain / LLM (OpenRouter via OpenAI-compatible endpoint)
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",

  # API/UI
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.2.1",
  "streamlit>=1.33.0",

  # Evaluation
  "ragas>=0.1.7",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not network and not slow'"
markers = [
  "network: tests that require external network or API keys",
  "slow: tests that are slow (large indexing, long eval runs)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", ".venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # allow long lines; formatter will handle most cases
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
